# ha-cleanliness-tracker

./: .codacy.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  hacs.json  info.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml  validate.yml
blueprints/automation/cleanliness_tracker/: vacuum_overdue_rooms.yaml
custom_components/cleanliness_tracker/: __init__.py  binary_sensor.py  config_flow.py  const.py  manifest.json  models.py  sensor.py  services.py  services.yaml  soil_calculator.py  storage.py  strings.json  tracker.py
custom_components/cleanliness_tracker/translations/: de.json  en.json
docs/: ARCHITECTURE.md  SCORE_MODEL.md  STANDARDS.md
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_init.py  test_sensor.py  test_services.py  test_soil_calculator.py  test_storage.py  test_tracker.py
