[project]
name = "ha-cleanliness-tracker"
version = "0.0.1"
description = "Home Assistant Custom Integration for per-room cleanliness scoring based on presence sensors"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
authors = [
    { name = "Simon Oberstedt", email = "62359912+TheRealSimon42@users.noreply.github.com" },
]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Repo-root contains both `custom_components/` and `blueprints/`. Without an
# explicit include filter, setuptools auto-discovery refuses to build the
# editable install ("multiple top-level packages discovered in a flat-layout").
include = ["custom_components*"]
namespaces = true

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-homeassistant-custom-component>=0.13",
    "freezegun>=1.5",
    "syrupy>=4.7",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/TheRealSimon42/ha-cleanliness-tracker"
Issues = "https://github.com/TheRealSimon42/ha-cleanliness-tracker/issues"
Documentation = "https://github.com/TheRealSimon42/ha-cleanliness-tracker#readme"

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["custom_components/cleanliness_tracker", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "C4",   # comprehensions
    "N",    # naming
    "D",    # pydocstyle
    "ANN",  # type annotations
    "S",    # bandit (security)
    "TID",  # tidy imports
    "ARG",  # unused arguments
    "PTH",  # use pathlib
    "PL",   # pylint subset
    "PT",   # pytest style
    "RET",  # return
    "TRY",  # try/except antipatterns
]
ignore = [
    "D203",    # conflict with D211
    "D213",    # conflict with D212
    "ANN401",  # Any sometimes legit (HA config dicts)
    "PLR0913", # too many arguments (HA callbacks need many)
    "TRY003",  # long error messages inline are acceptable for diagnostics
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",      # no docstrings required in tests
    "ANN",    # no type annotations required in tests
    "S101",   # assert is fine in tests
    "PLR2004", # magic values are fine in tests
]
"custom_components/cleanliness_tracker/__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["custom_components.cleanliness_tracker"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "homeassistant",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
homeassistant = ["homeassistant"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
files = ["custom_components/cleanliness_tracker"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=custom_components.cleanliness_tracker",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-branch",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["custom_components/cleanliness_tracker"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
# Will be raised to 80 once tracker.py + entities are fully covered.
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.paths]
source = ["custom_components/cleanliness_tracker"]
